--- a/one/index.html
+++ b/one/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>YGLRX One</title>
+    <style>
+        body {
+            margin: 0;
+        }
+
+        canvas {
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(ellipse at center, rgba(76, 76, 26, 1) 0, #1b2f0e 0, rgba(0, 0, 0, 1) 100%);
+        }
+    </style>
 </head>
 <body>
-<audio id="audio"></audio>
-<canvas id="canvas" width="920px" height="50px"></canvas>
-<a href="../two/index.html">Next</a>
+<div style="height: 100vh; position:relative; overflow: hidden">
+    <canvas id="canvas"></canvas>
+</div>
+<a href="../two/index.html"></a>
 <script src="./index.js"></script>
 </body>
 </html>
