--- a/two/index.html
+++ b/two/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>YGLRX Two</title>
+    <link href="https://fonts.googleapis.com/css?family=Averia+Serif+Libre" rel="stylesheet">
     <style>
         body {
             margin: 0;
