--- a/index.html
+++ b/index.html
@@ -3,25 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>YGLRX</title>
-    <style>
-        body {
-            margin: 0;
-        }
-
-        canvas {
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(ellipse at center, rgba(76, 76, 26, 1) 0, #1b2f0e 0, rgba(0, 0, 0, 1) 100%);
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<div style="height: 100vh; position:relative; overflow: hidden">
-    <canvas id="canvas"></canvas>
-</div>
 
-<a href="./one/index.html"></a>
+<main class="flex flex-center">
 
+    <section class="center">
+        <h1>YG<span class="pink">L</span>RX</h1>
+        <h3>You gotta love RxJS</h3>
+        <p>by</p>
+        <p>Helen Zhukova</p>
+    </section>
+</main>
+
+<a href="./zero/index.html"></a>
 <script src="./index.js"></script>
 </body>
 </html>
