--- a/three/index.html
+++ b/three/index.html
@@ -46,8 +46,13 @@ from([urls])
         </div>
     </section>
     <section class="center slide" style="display: none">
-        <h1>Get started</h1>
-        <h3>http://reactivex.io/rxjs/</h3>
+        <h1><a href="http://reactivex.io/rxjs/">Get started</a></h1>
+        <h3>RxJs home page</h3>
+    </section>
+    <section class="center slide" style="display: none">
+        <h1><a href="https://medium.com/@benlesh/learning-observable-by-building-observable-d5da57405d87">Learning Observable By Building Observable</a></h1>
+        <h3>Ben Lesh</h3>
+        <p>RxJS 5+ Lead, Software Engineer at Google</p>
     </section>
 </main>
 <script src="./index.js"></script>
