--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </section>
 </main>
 
-<a href="./intro/index.html"></a>
+<a id="next" href="./intro/index.html"></a>
 <script src="./index.js"></script>
 </body>
 </html>
