--- a/one/index.html
+++ b/one/index.html
@@ -59,7 +59,7 @@ playP(42, 'G3')
 <div class="canvasContainer" style="display: none" id="canvasContainer">
     <canvas id="canvas"></canvas>
 </div>
-<a href="../two/index.html"></a>
+<a id="next" href="../two/index.html"></a>
 <script src="./index.js"></script>
 </body>
 </html>
