--- a/three/index.html
+++ b/three/index.html
@@ -55,6 +55,6 @@ from([urls])
         <p>RxJS 5+ Lead, Software Engineer at Google</p>
     </section>
 </main>
-<script src="./index.js"></script>
+<script id="next" src="./index.js"></script>
 </body>
 </html>
