--- a/two/index.html
+++ b/two/index.html
@@ -20,7 +20,7 @@ zip(notes$, timeMs$.concatMap(ms => timer(ms)))
 <div class="canvasContainer" style="display: none" id="canvasContainer">
     <canvas id="canvas"></canvas>
 </div>
-<a href="../three/index.html"></a>
+<a id="next" href="../three/index.html"></a>
 <script src="./index.js"></script>
 </body>
 </html>
