--- a/zero/index.html
+++ b/zero/index.html
@@ -34,7 +34,7 @@ setTimeout(() => play('G3'), 242);
     <canvas id="canvas"></canvas>
 </div>
 
-<a href="../one/index.html"></a>
+<a id="next" href="../one/index.html"></a>
 
 <script src="./index.js"></script>
 </body>
