--- a/intro/index.html
+++ b/intro/index.html
@@ -42,7 +42,7 @@
     </section>
   </main>
 
-  <a id="next" href="/YGLRX/zero/index.html"></a>
+  <a id="next" href="/YGLRX/three/index.html"></a>
   <script src="/YGLRX/intro.b51b8765.js"></script>
 </body>
 
