--- a/three/index.html
+++ b/three/index.html
@@ -55,6 +55,7 @@ from([urls])
         <p>RxJS 5+ Lead, Software Engineer at Google</p>
     </section>
 </main>
-<script id="next" src="/YGLRX/three.24a7da46.js"></script>
+<a id="next" href="/YGLRX/zero/index.html"></a>
+<script src="/YGLRX/three.24a7da46.js"></script>
 </body>
 </html>
